test/shouldPass/vonVolker/test15.pas
program test15;
var
    b,c,d,e : boolean;
begin
    e := b and c and d;

end.