test/shouldFail/expr/timesStr.pas
program Sample;
var
  i : string;

begin
  i := 'aa' * ' 3';
//     ^^^^^^^^^^^
// Operator '*' cannot be applied to string and string
end.
